# AI-crawler

./: .allowed-commands  .env.example  .gitignore  PROMPT.md  README.md  build.bat  build.sh  pyproject.toml  requirements.txt  setup.py  test_query_engine.py
crawl_agent/: __init__.py  cli.py
crawl_agent/core/: __init__.py  index.py  llm.py  terminal.py  web.py
crawl_agent/handlers/: __init__.py  ask.py  crawl.py  manage.py  query_engine.py
crawl_agent/utils/: __init__.py  display.py  html_cleaner.py
data/: index.json
data/datasets/: .gitkeep
